# Soccer-AI

./: .gitignore  CMakeLists.txt  README.md  todo.md
docs/: main_flow_and_constants_explained.md
include/game/: base_game_entity.h  entity_manager.h  goal.h  moving_entity.h  soccer_pitch.h  soccer_team.h  steering_behavs.h
include/game/entities/: field_player.h  goal_keeper.h  player.h  soccer_ball.h
include/game/graphics/: visualizer.h
include/math/: vector.h
include/state_machine/: message.h  message_manager.h  state.h  state_machine.h
include/state_machine/states/: prepare_kick_off.h
include/state_machine/states/field_player_states/: chase.h  dribble.h  global.h  kick.h  receive.h  return_to_home.h  support.h  wait.h
include/state_machine/states/goal_keeper_states/: global.h  intercept.h  protect_goal.h  put_ball_back.h  return_home.h
include/state_machine/states/soccer_team_states/: attacking.h  defending.h  prepare_kick_off.h
include/utils/: constants.h  region.h  time_system.h  utils.h  wall.h
scripts/: setup_debug.sh
src/: main.cc
src/game/: soccer_pitch.cc  soccer_team.cc  steering_behavs.cc
src/game/entities/: field_player.cc  goal_keeper.cc  player.cc  soccer_ball.cc
src/game/graphics/: visualizer.cc
src/state_machine/: field_player_states.cc  goal_keeper_states.cc  soccer_team_states.cc
tests/: test_base_game_entity.cc  test_entity_manager.cc  test_message.cc  test_message_manager.cc  test_moving_entity.cc  test_soccer_ball.cc  test_time_system.cc  test_vector.cc  test_wall.cc
